@@ -2,6 +2,7 @@ import atexit
 import contextlib
 import os
 import math
+import platform
 import signal
 import typing
 from typing import Union
@@ -171,7 +172,7 @@ class SexpSymbol(sexp.Sexp):
         return conversion._cchar_to_str(
             openrlib._STRING_VALUE(
                 self._sexpobject._cdata
-            )
+            ), 'utf-8'
         )
 
 
@@ -879,6 +880,25 @@ def initr_checkenv() -> typing.Optional[int]:
 initr = initr_checkenv
 
 
+def _update_R_ENC_PY():
+    conversion._R_ENC_PY[openrlib.rlib.CE_UTF8] = 'utf-8'
+
+    l10n_info = tuple(baseenv['l10n_info']())
+    if platform.system() == 'Windows':
+        val_latin1 = 'cp{:d}'.format(l10n_info[3][0])
+    else:
+        val_latin1 = 'latin1'
+    conversion._R_ENC_PY[openrlib.rlib.CE_LATIN1] = val_latin1
+
+    if l10n_info[1]:
+        val_native = conversion._R_ENC_PY[openrlib.rlib.CE_UTF8]
+    else:
+        val_native = val_latin1
+    conversion._R_ENC_PY[openrlib.rlib.CE_NATIVE] = val_native
+
+    conversion._R_ENC_PY[openrlib.rlib.CE_ANY] = 'utf-8'
+
+
 def _post_initr_setup() -> None:
 
     emptyenv.__sexp__ = _rinterface.SexpCapsule(openrlib.rlib.R_EmptyEnv)
@@ -918,6 +938,7 @@ def _post_initr_setup() -> None:
     NA_Complex = na_values.NA_Complex
 
     signal.signal(signal.SIGINT, _sigint_handler)
+    _update_R_ENC_PY()
 
 
 def rternalize(function: typing.Callable) -> SexpClosure:
